:whale: update docker image

--- a/docker/requirements.txt
+++ b/docker/requirements.txt
@@ -1,6 +1,14 @@
+jupyterlab
 numpy
 scipy
 pandas
 pandas-profiling
-jupyterlab
+polars
+matplotlib
+japanize-matplotlib
+seaborn
+scikit-learn
+umap-learn
 ipywidgets
+tqdm
+python-dotenv
