--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.10.9-slim-bullseye
+FROM python:3.11.6-slim-bullseye
 
 RUN apt-get update && \
   apt-get install -y --no-install-recommends \
@@ -6,8 +6,7 @@ RUN apt-get update && \
   build-essential && \
   apt-get autoremove -y && \
   apt-get clean -y && \ 
-  rm -rf /var/lib/apt/lists/* && \
-  mkdir /code
+  rm -rf /var/lib/apt/lists/*
 WORKDIR /code
 COPY requirements.txt /code/
 RUN pip --no-cache-dir install --upgrade pip setuptools && \
